# async-actor

./: Cargo.toml
async-actor-proc/: Cargo.toml
async-actor-proc/src/: actor_handle_impl.rs  actor_impl.rs  actor_impl_impl.rs  actor_proc.rs  assisted_factory_proc.rs  assisted_instantiable_derive.rs  component_derive.rs  inject_attribute.rs  inject_default_attribute.rs  inject_impl.rs  injectable_instance_derive.rs  lib.rs  singleton_derive.rs  singleton_impl.rs  util.rs
examples/: assisted_factory.rs  dependency_injection.rs  simple.rs
examples/simple/: Cargo.toml  main.rs
src/: lib.rs  system.rs
src/inject/: assisted_inject.rs  injectable_instance.rs  mod.rs  singleton.rs
src/util/: container.rs  debug.rs  lazy.rs  lazy_cell.rs  mod.rs  resolvable.rs
