[package]
name = "async-actor"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["async-actor-proc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features=["full"] }
async-trait = "0.1.59"
pin-project = "1.0.12"
better-than-actix-macro = {path= "async-actor-proc" }
const-assert = "1.0.0"
